[fix] button align inner text

--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,19 @@ img{
 }
 
 .button{
+    display: flex;
     background-color: rgb(0, 97, 255);
-    padding: 1.5% 3.5% 1.5% 3.5%;
+    width: 75px;
+    height: 35px;
     color: white;
+    justify-content: center;
+    align-items: center;
 }
 
 .big.button{
     width: 225px;
     height: 45px;
-    padding-top:3%
+
 }
 
 .card{
